# ProjetC

./: CMakeLists.txt  README.md
CSS/: style.css
database/: adherents  livres
glade/: home.glade
src/: main.c
src/headers/: header.h
src/pages/gestion des adherents/: gestion_adherent.c  gestion_adherent.h
src/pages/gestion des empruntes/: gestion_emprunte.c  gestion_emprunte.h
src/pages/gestion des livres/: gestion_livre.c  gestion_livre.h
src/pages/page accueil/: home.c  home.h
